--- a/CompilerCore/CompilerCore.vcxproj.filters
+++ b/CompilerCore/CompilerCore.vcxproj.filters
@@ -15,42 +15,36 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CompilerCore.h">
+    <ClInclude Include="Include\CompilerCore.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="stdafx.h">
+    <ClInclude Include="Include\CErrorsModule.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Resource.h">
+    <ClInclude Include="Include\CToken.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CErrorsModule.h">
+    <ClInclude Include="Include\CLexAnalizer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CLexAnalizer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CToken.h">
+    <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CompilerCore.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="AssemblyInfo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="stdafx.cpp">
+    <ClCompile Include="Source\CompilerCore.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CErrorsModule.cpp">
+    <ClCompile Include="Source\CErrorsModule.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CLexAnalizer.cpp">
+    <ClCompile Include="Source\CToken.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CToken.cpp">
+    <ClCompile Include="Source\CLexAnalizer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
