estructura de las funciones

--- a/CompilerCore/CompilerCore.vcxproj
+++ b/CompilerCore/CompilerCore.vcxproj
@@ -142,12 +142,23 @@
     <ClInclude Include="Include\CLocalNode.h" />
     <ClInclude Include="Include\CompilerCore.h" />
     <ClInclude Include="Include\CSynAnalizer.h" />
+    <ClInclude Include="Include\CSynAssignState.h" />
+    <ClInclude Include="Include\CSynExp_Log_ListState.h" />
+    <ClInclude Include="Include\CSynForState.h" />
+    <ClInclude Include="Include\CSynFunc_CallState.h" />
+    <ClInclude Include="Include\CSynIfState.h" />
+    <ClInclude Include="Include\CSynPrintState.h" />
     <ClInclude Include="Include\CSynProgramState.h" />
     <ClInclude Include="Include\CSynDimentionState.h" />
     <ClInclude Include="Include\CSynFuncState.h" />
     <ClInclude Include="Include\CSynFunction_BlockState.h" />
     <ClInclude Include="Include\CSynParamState.h" />
+    <ClInclude Include="Include\CSynReadState.h" />
+    <ClInclude Include="Include\CSynReturnState.h" />
+    <ClInclude Include="Include\CSynStatement_BlockState.h" />
+    <ClInclude Include="Include\CSynSwitchState.h" />
     <ClInclude Include="Include\CSynVarState.h" />
+    <ClInclude Include="Include\CSynWhileState.h" />
     <ClInclude Include="Include\CTabSym.h" />
     <ClInclude Include="Include\CToken.h" />
     <ClInclude Include="resource.h" />
@@ -160,12 +171,23 @@
     <ClCompile Include="Source\CLocalNode.cpp" />
     <ClCompile Include="Source\CompilerCore.cpp" />
     <ClCompile Include="Source\CSynAnalizer.cpp" />
+    <ClCompile Include="Source\CSynAssignState.cpp" />
+    <ClCompile Include="Source\CSynExp_Log_ListState.cpp" />
+    <ClCompile Include="Source\CSynForState.cpp" />
+    <ClCompile Include="Source\CSynFunc_CallState.cpp" />
+    <ClCompile Include="Source\CSynIfState.cpp" />
+    <ClCompile Include="Source\CSynPrintState.cpp" />
     <ClCompile Include="Source\CSynProgramState.cpp" />
     <ClCompile Include="Source\CSynDimentionState.cpp" />
     <ClCompile Include="Source\CSynFuncState.cpp" />
     <ClCompile Include="Source\CSynFunction_BlockState.cpp" />
     <ClCompile Include="Source\CSynParamState.cpp" />
+    <ClCompile Include="Source\CSynReadState.cpp" />
+    <ClCompile Include="Source\CSynReturnState.cpp" />
+    <ClCompile Include="Source\CSynStatement_BlockState.cpp" />
+    <ClCompile Include="Source\CSynSwitchState.cpp" />
     <ClCompile Include="Source\CSynVarState.cpp" />
+    <ClCompile Include="Source\CSynWhileState.cpp" />
     <ClCompile Include="Source\CTabSym.cpp" />
     <ClCompile Include="Source\CToken.cpp" />
   </ItemGroup>
